<resources>
    <string name="app_name">GeographyPlay</string>
    <string name="tab_text_1">Conocimiento</string>
    <string name="tab_text_2">Juegos</string>
    <string name="tab_text_3">Comprensión</string>
    <string name="title_activity_inicio">GeographyPlay</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="como_quieres_interactuar_con_la_informaci_n">INTERACTUA CON LA INFORMACIÓN</string>
    <string name="btnSR">INICIAR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="geoplay">GEOPLAY</string>
    <string name="iniciar">Iniciar</string>
    <string name="men_principal">Menú Principal</string>
    <string name="men">Menú</string>
    <string name="didactico">didactico</string>
    <string name="saber">Saber</string>
    <string name="interactivo">Interactivo</string>
    <string name="encuentra_las_parejas">Encuentra las parejas</string>
    <string name="jugador_0">Jugador: 0</string>
    <string name="puntaje_jugador_0">Puntaje Jugador: 0</string>
    <string name="concentrese">Concentrese</string>
    <string name="puzzle">Puzzle</string>
    <string name="enlazar">Enlazar</string>
    <string name="elige_un_juego">ELIJE UN MODO</string>
    <string name="arma_el_rompecabezas">Arma el Rompecabezas</string>
    <string name="title_activity_informacion">Información</string>
    <string name="preguntas">Cuestionario</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_interactivo">Interactivo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_info">Info</string>
    <string name="antigua_y_barbuda">ANTIGUA Y BARBUDA</string>
    <string name="contenido_txt1">EXTENSIÓN TERRITORIAL: 440 Kilómetros Cuadrados\nPOBLACIÓN: 100.963 personas aproximadamente\nCAPITAL: Saint John\nIDIOMA: Su idioma oficial es el Inglés\nGENTILICIO: Antiguano/na\nMONEDA: Dólar del Caribe-Este</string>
    <string name="argentina">ARGENTINA</string>
    <string name="contenido_txt2">NOMBRE OFICIAL: República Argentina.\nEXTENSIÓN TERRITORIAL: 2.78 Millones de Kilómetros Cuadrados\nPOBLACIÓN: 43.85 millones de personas aproximadamente\nCAPITAL: Buenos Aires\nIDIOMA: Su idioma oficial es el Español\nGENTILICIO: Argentino/na\nMONEDA: Peso Argentino</string>
    <string name="bahamas">BAHAMAS</string>
    <string name="contenido_txt3">NOMBRE OFICIAL: Mancomunidad de las Bahamas.\nEXTENSIÓN TERRITORIAL: 13.878 Kilómetros Cuadrados\nPOBLACIÓN: 391.232 personas aproximadamente\nCAPITAL: Nasáu\nIDIOMA: Su idioma oficial es el Inglés\nGENTILICIO: Bahameño/na o Bahamés/esa\nMONEDA: Dólar Bahameño</string>
    <string name="barbados">BARBADOS</string>
    <string name="contenido_txt4">EXTENSIÓN TERRITORIAL: 431 Kilómetros Cuadrados\nPOBLACIÓN: 284.996 personas aproximadamente\nCAPITAL: Bridgetown\nIDIOMA: Su idioma oficial es el Inglés\nGENTILICIO: Barbadense\nMONEDA: Dólar Barbadense</string>
    <string name="belice">BELICE</string>
    <string name="contenido_txt5">EXTENSIÓN TERRITORIAL: 22.966 Kilómetros Cuadrados\nPOBLACIÓN: 366.954 personas aproximadamente\nCAPITAL: Belmopán\nIDIOMA: Su idioma oficial es el Inglés\nGENTILICIO: Beliceño/a\nMONEDA: Dólar Beliceño</string>
    <string name="bolivia">BOLIVIA</string>
    <string name="contenido_txt6">NOMBRE OFICIAL: Estado Plurinacional de Bolivia.\nEXTENSIÓN TERRITORIAL: 1.099 Millones de Kilómetros Cuadrados\nPOBLACIÓN: 10.89 millones de personas aproximadamente\nCAPITAL: La Paz\nIDIOMA: Su idioma oficial es el Español, seguido del Quechua y el Aimara\nGENTILICIO: Boliviano/a\nMONEDA: Boliviano</string>
    <string name="brasil">BRASIL</string>
    <string name="contenido_txt7">NOMBRE OFICIAL: República Federativa de Brasil.\nEXTENSIÓN TERRITORIAL: 8.516 Millones de Kilómetros Cuadrados\nPOBLACIÓN: 207.7 millones de personas aproximadamente\nCAPITAL: Brasilia\nIDIOMA: Su idioma oficial es el Portugués\nGENTILICIO: Brasileño/a o Brasilero/a\nMONEDA: Real Braseileño</string>
    <string name="canada">CANADÁ</string>
    <string name="contenido_txt8">EXTENSIÓN TERRITORIAL: 9.985 Millones de Kilómetros Cuadrados\nPOBLACIÓN: 36.29 millones de personas aproximadamente\nCAPITAL: Ottawa\nIDIOMA: Su idioma oficial es el Inglés seguido del Francés\nGENTILICIO: Canadiense\nMONEDA: Dólar Canadiense</string>
    <string name="chile">CHILE</string>
    <string name="contenido_txt9">NOMBRE OFICIAL: República de Chile.\nEXTENSIÓN TERRITORIAL: 756.102 Kilómetros Cuadrados\nPOBLACIÓN: 17.91 millones de personas aproximadamente\nCAPITAL: Santiago de Chile\nIDIOMA: Su idioma oficial es el Español\nGENTILICIO: Chileno/a\nMONEDA: Peso Chileno</string>
    <string name="colombia">COLOMBIA</string>
    <string name="america_del_norte_y_centro">America del Norte y centro</string>
    <string name="america_del_sur">America del Sur</string>
    <string name="pon_a_prueba_tu_memoria">PON A PRUEBA TU MEMORIA</string>
    <string name="elige_un_rompecabezas">ELIGE UN ROMPECABEZAS</string>
    <string name="modulo_conocimiento">PRUEBA TU CONOCIMIENTO</string>
    <string name="contrasenia">Contraseña:</string>
    <string name="usuario">Usuario:</string>
    <string name="correo">Correo:</string>
    <string name="registrarse">Registrarse</string>
    <string name="cerrar_sesion">cerrar Sesion</string>
    <string name="inicar_cuestionario">Inicar cuestionario</string>
    <string name="desc_conocimiento">Estas en la sección del conocimiento en el cual vas a responder un cuestionario de 6 preguntas acerca de los temas apoyados en la aplicación, presiona iniciar cuestionario.</string>
</resources>