<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul"
    android:orientation="vertical"
    android:id="@+id/selectConcentrese"
    tools:context="com.udistrital.geographyplay.SelectConcentrese">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/acme"
        android:text="@string/pon_a_prueba_tu_memoria"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:gravity="center_horizontal" />

    <ImageButton
        android:id="@+id/Norte"
        android:layout_width="182dp"
        android:layout_height="119dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:background="@drawable/botonnorte" />
    <TextView
        android:layout_width="182dp"
        android:layout_height="60dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="24dp"
        android:textAlignment="center"
        android:text="@string/america_del_norte_y_centro"
        android:textColor="@android:color/background_light"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal" />

    <ImageButton
        android:id="@+id/Sur"
        android:layout_width="116dp"
        android:layout_height="149dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:background="@drawable/botonsur"
        android:textColor="@android:color/background_light"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="115dp"
        android:textSize="24dp"
        android:textAlignment="center"
        android:text="@string/america_del_sur"
        android:textColor="@android:color/background_light"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal"
        />

</RelativeLayout>
