<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul"
    tools:context="com.udistrital.geographyplay.MenuJuegos">

    <ImageButton
        android:id="@+id/btnConcentrese"
        android:layout_width="164dp"
        android:layout_height="125dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp"
        android:background="@drawable/btnmemorama"
        android:fontFamily="@font/aclonica"
        android:text="@string/concentrese"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="288dp" />

    <TextView
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btnConcentrese"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="-89dp"
        android:clickable="false"
        android:fontFamily="@font/aclonica"
        android:text="@string/concentrese"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold|italic" />
    <ImageButton
        android:id="@+id/btnPuzle"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="184dp"
        android:background="@drawable/btnpuzzle"
        android:fontFamily="@font/aclonica"
        android:text="@string/puzzle"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="170dp" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:layout_gravity="center"
        android:clickable="false"
        android:fontFamily="@font/aclonica"
        android:textColor="@android:color/background_light"
        android:text="@string/puzzle"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        ></TextView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/acme"
        android:text="@string/elige_un_juego"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="60dp"
        android:gravity="center_horizontal" />
</RelativeLayout>
